force-app/main/default/objects/Contact/fields/Number_Employment_History__c.field-meta.xml
<CustomField>
    <fullName>Number_Employment_History__c</fullName>
    <label>Number Employment History</label>
    <summaryForeignKey>Employment_History__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>