force-app/main/default/objects/Contact/fields/Number_Housing_Goals__c.field-meta.xml
<CustomField>
    <fullName>Number_Housing_Goals__c</fullName>
    <label>Number Housing Goals</label>
    <summaryForeignKey>Housing_Goal__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>