force-app/main/default/objects/Contact/fields/Number_Housing_History__c.field-meta.xml
<CustomField>
    <fullName>Number_Housing_History__c</fullName>
    <label>Number Housing History</label>
    <summaryForeignKey>Housing_History__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>