force-app/main/default/objects/Contact/fields/Number_Housing_Members__c.field-meta.xml
<CustomField>
    <fullName>Number_Housing_Members__c</fullName>
    <label>Number Housing Members</label>
    <summaryForeignKey>Housing_Member__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>