force-app/main/default/objects/Contact/fields/Number_Housing_Strengths_or_Challenges__c.field-meta.xml
<CustomField>
    <fullName>Number_Housing_Strengths_or_Challenges__c</fullName>
    <label>Number Housing Strengths or Challenges</label>
    <summaryForeignKey>Housing_Strength_or_Challenge__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>