force-app/main/default/objects/Contact/fields/Number_Income__c.field-meta.xml
<CustomField>
    <fullName>Number_Income__c</fullName>
    <label>Number Income</label>
    <summaryForeignKey>Income_Source__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>