force-app/main/default/objects/Contact/fields/Number_Waitlist_Entry__c.field-meta.xml
<CustomField>
    <fullName>Number_Waitlist_Entry__c</fullName>
    <label>Number Waitlist Entry</label>
    <summaryForeignKey>Waitlist_Entry__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>