force-app/main/default/objects/Contact/fields/Old_Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Old_Owner_Id__c</fullName>
    <label>Old Owner Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>