force-app/main/default/objects/Contact/fields/Old_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Old_Owner_Name__c</fullName>
    <label>Old Owner Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>