force-app/main/default/objects/Contact/fields/Old_Status__c.field-meta.xml
<CustomField>
    <fullName>Old_Status__c</fullName>
    <label>Old Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Client_Intake</valueSetName>
    </valueSet>
</CustomField>