force-app/main/default/objects/Contact/fields/Other_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Other_Relationship__c</fullName>
    <label>Other Relationship</label>
    <length>100</length>
    <type>Text</type>
</CustomField>