force-app/main/default/objects/Contact/fields/Owner_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name_Formula__c</fullName>
    <formula>Owner.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Name Formula</label>
    <type>Text</type>
</CustomField>