force-app/main/default/objects/Contact/fields/OwnerActive__c.field-meta.xml
<CustomField>
    <fullName>OwnerActive__c</fullName>
    <formula>Owner.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OwnerActive</label>
    <type>Checkbox</type>
</CustomField>