force-app/main/default/objects/Contact/fields/OwnerIsNotRC__c.field-meta.xml
<CustomField>
    <fullName>OwnerIsNotRC__c</fullName>
    <formula>Owner.Profile.Name != &quot;RC&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OwnerIsNotRC</label>
    <type>Checkbox</type>
</CustomField>