force-app/main/default/objects/Contact/fields/OwnerRole__c.field-meta.xml
<CustomField>
    <fullName>OwnerRole__c</fullName>
    <formula>Owner.UserRole.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OwnerRole</label>
    <type>Text</type>
</CustomField>