force-app/main/default/objects/Contact/fields/Paid_Support_Agency__c.field-meta.xml
<CustomField>
    <fullName>Paid_Support_Agency__c</fullName>
    <label>Paid Support Agency</label>
    <length>40</length>
    <type>Text</type>
</CustomField>