force-app/main/default/objects/Contact/fields/Paid_Support_Email__c.field-meta.xml
<CustomField>
    <fullName>Paid_Support_Email__c</fullName>
    <label>Paid Support Email</label>
    <type>Email</type>
</CustomField>