force-app/main/default/objects/Contact/fields/Paid_Support_Name__c.field-meta.xml
<CustomField>
    <fullName>Paid_Support_Name__c</fullName>
    <label>Paid Support Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>