force-app/main/default/objects/Contact/fields/Paid_Support_Phone__c.field-meta.xml
<CustomField>
    <fullName>Paid_Support_Phone__c</fullName>
    <label>Paid Support Phone</label>
    <type>Phone</type>
</CustomField>