force-app/main/default/objects/Contact/fields/Paid_Support_Type__c.field-meta.xml
<CustomField>
    <fullName>Paid_Support_Type__c</fullName>
    <label>Paid Support Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Paid_Service_Type</valueSetName>
    </valueSet>
</CustomField>