force-app/main/default/objects/Contact/fields/Partner_Property__c.field-meta.xml
<CustomField>
    <fullName>Partner_Property__c</fullName>
    <label>Partner Property</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Partner_Properties</valueSetName>
    </valueSet>
</CustomField>