force-app/main/default/objects/Contact/fields/Partner_Property_Error__c.field-meta.xml
<CustomField>
    <fullName>Partner_Property_Error__c</fullName>
    <formula>AND(
  OR(
    Active_RC_Service_Case__c = True,
    Active_FS_Service_Case__c = True
  ),
  ISBLANK(TEXT( Partner_Property__c ))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Property Error</label>
    <type>Checkbox</type>
</CustomField>