force-app/main/default/objects/Contact/fields/Partner_Property_Unit_Error__c.field-meta.xml
<CustomField>
    <fullName>Partner_Property_Unit_Error__c</fullName>
    <formula>AND(

  OR(
    Active_RC_Service_Case__c = True,
    Active_FS_Service_Case__c = True
  ),

  OR(
    FALSE
  )
)

/*    NOT(CONTAINS(Current_Unit__r.Name, Current_Unit__r.Unit__r.Property__r.Name)) */
/*    ISBLANK(Current_Unit__c), */
/*    CONTAINS(Current_Unit__r.Name, &quot;Need&quot;) */</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Property Unit Error</label>
    <type>Checkbox</type>
</CustomField>