force-app/main/default/objects/Contact/fields/Percent_AMI__c.field-meta.xml
<CustomField>
    <fullName>Percent_AMI__c</fullName>
    <formula>IF
(
				AMI__c = 0, Null, HH_Income_Annual__c / AMI__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent AMI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>