force-app/main/default/objects/Contact/fields/Pet_Non_Service_Animal__c.field-meta.xml
<CustomField>
    <fullName>Pet_Non_Service_Animal__c</fullName>
    <label>Pet (Non Service Animal)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>