force-app/main/default/objects/Contact/fields/Primary_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Email__c</fullName>
    <formula>CASE(TEXT(Primary_Contact_List__c),

    &quot;Client&quot;, Client_Email__c, 

    &quot;Conservator&quot;, Conservator_Email__c, 

    &quot;Family Contact&quot;, Family_Contact_Email__c, 

    &quot;Paid Support Contact&quot;, Paid_Support_Email__c, 

    &quot;Rep Payee&quot;, Rep_Payee_Email__c, 

    &quot;Service Coordinator&quot;, Service_Coordinator_Email__c,

    &quot;Other&quot;, Other_Email__c,

    &quot;&quot;

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Email</label>
    <type>Text</type>
</CustomField>