force-app/main/default/objects/Contact/fields/Primary_Contact_List__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_List__c</fullName>
    <label>Primary Contact List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Family Contact</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Paid Support Contact</fullName>
            </value>
            <value>
                <fullName>Conservator</fullName>
            </value>
            <value>
                <fullName>Rep Payee</fullName>
            </value>
            <value>
                <fullName>Service Coordinator</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>