force-app/main/default/objects/Contact/fields/Primary_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Phone__c</fullName>
    <formula>CASE(TEXT(Primary_Contact_List__c),

    &quot;Client&quot;, Client_Phone__c, 
    &quot;Family Contact&quot;, Family_Contact_Phone__c, 
    &quot;Paid Support Contact&quot;, Paid_Support_Phone__c, 
    &quot;Service Coordinator&quot;, Service_Coordinator_Phone__c,
    &quot;Conservator&quot;, Conservator_Phone__c, 
    &quot;Rep Payee&quot;, Rep_Payee_Phone__c, 
    &quot;Other&quot;, Other_Phone__c,
    &quot;&quot;

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Contact Phone</label>
    <type>Text</type>
</CustomField>