force-app/main/default/objects/Contact/fields/Prior_Eviction__c.field-meta.xml
<CustomField>
    <fullName>Prior_Eviction__c</fullName>
    <label>Prior Eviction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>