force-app/main/default/objects/Contact/fields/Property_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Property_Contact_Email__c</fullName>
    <label>Property Contact Email</label>
    <type>Email</type>
</CustomField>