force-app/main/default/objects/Contact/fields/QR_Due_Now__c.field-meta.xml
<CustomField>
    <fullName>QR_Due_Now__c</fullName>
    <formula>CASE(MONTH(TODAY()),
    2,&apos;Q1-&apos; &amp; TEXT(year(TODAY())),
    3,&apos;Q1-&apos; &amp; TEXT(year(TODAY())),
    4,&apos;Q1-&apos; &amp; TEXT(year(TODAY())),
    5,&apos;Q2-&apos; &amp; TEXT(year(TODAY())),
    6,&apos;Q2-&apos; &amp; TEXT(year(TODAY())),
    7,&apos;Q2-&apos; &amp; TEXT(year(TODAY())),
    8,&apos;Q3-&apos; &amp; TEXT(year(TODAY())),
    9,&apos;Q3-&apos; &amp; TEXT(year(TODAY())),
    10,&apos;Q3-&apos; &amp; TEXT(year(TODAY())),
    11,&apos;Q4-&apos; &amp; TEXT(year(TODAY())),
    12,&apos;Q4-&apos; &amp; TEXT(year(TODAY())),
    1,&apos;Q4-&apos; &amp; TEXT(year(TODAY())-1),
    Null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QR Due Now</label>
    <type>Text</type>
</CustomField>