force-app/main/default/objects/Contact/fields/QR_Due_Prev_2_Status__c.field-meta.xml
<CustomField>
    <fullName>QR_Due_Prev_2_Status__c</fullName>
    <label>QR Due Prev -2 Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>QR_on_Contact_Status</valueSetName>
    </valueSet>
</CustomField>