force-app/main/default/objects/Contact/fields/QR_Due_Prev_3__c.field-meta.xml
<CustomField>
    <fullName>QR_Due_Prev_3__c</fullName>
    <formula>CASE(MONTH(TODAY()),
    2,&apos;Q2-&apos; &amp; TEXT(year(TODAY())-1),
    3,&apos;Q2-&apos; &amp; TEXT(year(TODAY())-1),
    4,&apos;Q2-&apos; &amp; TEXT(year(TODAY())-1),
    5,&apos;Q3-&apos; &amp; TEXT(year(TODAY())-1),
    6,&apos;Q3-&apos; &amp; TEXT(year(TODAY())-1),
    7,&apos;Q3-&apos; &amp; TEXT(year(TODAY())-1),
    8,&apos;Q4-&apos; &amp; TEXT(year(TODAY())-1),
    9,&apos;Q4-&apos; &amp; TEXT(year(TODAY())-1),
    10,&apos;Q4-&apos; &amp; TEXT(year(TODAY())-1),
    11,&apos;Q1-&apos; &amp; TEXT(year(TODAY())),
    12,&apos;Q1-&apos; &amp; TEXT(year(TODAY())),
    1,&apos;Q1-&apos; &amp; TEXT(year(TODAY())-1),
    Null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QR Due Prev -3</label>
    <type>Text</type>
</CustomField>