force-app/main/default/objects/Contact/fields/Reason_to_Move__c.field-meta.xml
<CustomField>
    <fullName>Reason_to_Move__c</fullName>
    <label>Reason to Move</label>
    <type>TextArea</type>
</CustomField>