force-app/main/default/objects/Contact/fields/Reassign__c.field-meta.xml
<CustomField>
    <fullName>Reassign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reassign</label>
    <type>Checkbox</type>
</CustomField>