force-app/main/default/objects/Contact/fields/Recertification_Complete_Current__c.field-meta.xml
<CustomField>
    <fullName>Recertification_Complete_Current__c</fullName>
    <formula>AND
(
    AND
    (
        NOT(ISNULL(Recertification_Date_Last_Completed__c)),
        NOT(ISBLANK(Recertification_Date_Last_Completed__c))
    ),

    Recertification_Date_Last_Completed__c &gt;= ADDMONTHS(TODAY(),-12)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recertification Complete Current</label>
    <type>Checkbox</type>
</CustomField>