force-app/main/default/objects/Contact/fields/Recertification_Date_Last_Completed__c.field-meta.xml
<CustomField>
    <fullName>Recertification_Date_Last_Completed__c</fullName>
    <label>Recertification Date Last Completed</label>
    <type>Date</type>
</CustomField>