force-app/main/default/objects/Contact/fields/Recertification_Expires__c.field-meta.xml
<CustomField>
    <fullName>Recertification_Expires__c</fullName>
    <formula>ADDMONTHS( Recertification_Date_Last_Completed__c, 12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Recertification Expires</label>
    <type>Date</type>
</CustomField>