force-app/main/default/objects/Contact/fields/Recommend_Credit_Report__c.field-meta.xml
<CustomField>
    <fullName>Recommend_Credit_Report__c</fullName>
    <label>Recommend Credit Report</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>