force-app/main/default/objects/Contact/fields/Recommend_Monthly_Budget__c.field-meta.xml
<CustomField>
    <fullName>Recommend_Monthly_Budget__c</fullName>
    <label>Recommend Monthly Budget</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>