force-app/main/default/objects/Contact/fields/Recommend_Rent_Savings_Plan__c.field-meta.xml
<CustomField>
    <fullName>Recommend_Rent_Savings_Plan__c</fullName>
    <label>Recommend Rent Savings Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>