force-app/main/default/objects/Contact/fields/Regional_Center__c.field-meta.xml
<CustomField>
    <fullName>Regional_Center__c</fullName>
    <label>Regional Center</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Regional_Center</valueSetName>
    </valueSet>
</CustomField>