force-app/main/default/objects/Contact/fields/RemoveReports__c.field-meta.xml
<CustomField>
    <fullName>RemoveReports__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RemoveReports</label>
    <type>Checkbox</type>
</CustomField>