force-app/main/default/objects/Contact/fields/Rep_Payee__c.field-meta.xml
<CustomField>
    <fullName>Rep_Payee__c</fullName>
    <label>Rep Payee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>