force-app/main/default/objects/Contact/fields/Rep_Payee_Email__c.field-meta.xml
<CustomField>
    <fullName>Rep_Payee_Email__c</fullName>
    <label>Rep Payee Email</label>
    <type>Email</type>
</CustomField>