force-app/main/default/objects/Contact/fields/Rep_Payee_Name__c.field-meta.xml
<CustomField>
    <fullName>Rep_Payee_Name__c</fullName>
    <label>Rep Payee Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>