force-app/main/default/objects/Contact/fields/Seasonal_Income__c.field-meta.xml
<CustomField>
    <fullName>Seasonal_Income__c</fullName>
    <label>Seasonal Income</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>