force-app/main/default/objects/Contact/fields/Section_8_Voucher_Number__c.field-meta.xml
<CustomField>
    <fullName>Section_8_Voucher_Number__c</fullName>
    <label>Section 8 Voucher Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>