force-app/main/default/objects/Contact/fields/Service_Animal__c.field-meta.xml
<CustomField>
    <fullName>Service_Animal__c</fullName>
    <label>Service Animal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>