force-app/main/default/objects/Contact/fields/Service_Coordinator_Email__c.field-meta.xml
<CustomField>
    <fullName>Service_Coordinator_Email__c</fullName>
    <label>Service Coordinator Email</label>
    <type>Email</type>
</CustomField>