force-app/main/default/objects/Contact/fields/Service_Coordinator_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Coordinator_Name__c</fullName>
    <label>Service Coordinator Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>