force-app/main/default/objects/Contact/fields/Service_Coordinator_Phone__c.field-meta.xml
<CustomField>
    <fullName>Service_Coordinator_Phone__c</fullName>
    <label>Service Coordinator Phone</label>
    <type>Phone</type>
</CustomField>