force-app/main/default/objects/Contact/fields/Staff_isActive__c.field-meta.xml
<CustomField>
    <fullName>Staff_isActive__c</fullName>
    <formula>Owner.IsActive</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Staff isActive</label>
    <type>Checkbox</type>
</CustomField>