force-app/main/default/objects/Contact/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>IF
(
    $RecordType.Name = &quot;Client&quot;, 
    &quot;Pre-Intake&quot;,
    &quot;Active&quot;
)</defaultValue>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Client_Intake</valueSetName>
    </valueSet>
</CustomField>