force-app/main/default/objects/Contact/fields/Steward__c.field-meta.xml
<CustomField>
    <fullName>Steward__c</fullName>
    <label>Steward</label>
    <length>250</length>
    <type>Text</type>
</CustomField>