force-app/main/default/objects/Contact/fields/Total_Assets__c.field-meta.xml
<CustomField>
    <fullName>Total_Assets__c</fullName>
    <label>Total Assets</label>
    <summarizedField>Asset_Debt__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Asset_Debt__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Asset</value>
    </summaryFilterItems>
    <summaryForeignKey>Asset_Debt__c.Contact__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>