force-app/main/default/objects/Contact/fields/Transportation_Method__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Method__c</fullName>
    <label>Transportation Method</label>
    <length>250</length>
    <type>Text</type>
</CustomField>