force-app/main/default/objects/Contact/fields/UCI__c.field-meta.xml
<CustomField>
    <fullName>UCI__c</fullName>
    <externalId>true</externalId>
    <label>UCI</label>
    <length>7</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>