force-app/main/default/objects/Contact/fields/UCI_Error__c.field-meta.xml
<CustomField>
    <fullName>UCI_Error__c</fullName>
    <formula>AND(

  RecordType.Name = &quot;Client&quot;,
  TEXT(Status__c) != &quot;Closed&quot;,

  OR(
    Active_HC_Service_Case__c = True,
    Active_RC_Service_Case__c = True,
    Active_CMH_Service_Case__c = True
  ),
      
  OR(
    LEN(UCI__c) != 7,
    NOT(ISNUMBER(UCI__c)),
    LEFT(UCI__c, 2) = &quot;00&quot;
  )

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UCI Error</label>
    <type>Checkbox</type>
</CustomField>