force-app/main/default/objects/Contact/fields/User_Not_HC_or_CMH_Active_RC_or_FS__c.field-meta.xml
<CustomField>
    <fullName>User_Not_HC_or_CMH_Active_RC_or_FS__c</fullName>
    <formula>AND(
  $User.User_Profile_Name__c != &quot;HC&quot;,

  OR(
    Active_RC_Service_Case__c = TRUE,
    Active_FS_Service_Case__c = TRUE
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Not HC or CMH &amp; Active RC or FS</label>
    <type>Checkbox</type>
</CustomField>