force-app/main/default/objects/Contact/fields/User_Not_RC_And_Active_HC_or_CMH__c.field-meta.xml
<CustomField>
    <fullName>User_Not_RC_And_Active_HC_or_CMH__c</fullName>
    <formula>AND(
  $User.User_Profile_Name__c != &quot;RC&quot;,

  OR(
    Active_HC_Service_Case__c = TRUE,
    Active_CMH_Service_Case__c = TRUE
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Not RC And Active HC or CMH</label>
    <type>Checkbox</type>
</CustomField>