force-app/main/default/objects/Contact/fields/UserIsOwner__c.field-meta.xml
<CustomField>
    <fullName>UserIsOwner__c</fullName>
    <formula>$User.Id =  Owner.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UserIsOwner</label>
    <type>Checkbox</type>
</CustomField>