force-app/main/default/objects/Contact/fields/Would_Consider_Roommate__c.field-meta.xml
<CustomField>
    <fullName>Would_Consider_Roommate__c</fullName>
    <label>Would Consider Roommate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>