force-app/main/default/objects/Contact/fields/Years_at_Partner_Property__c.field-meta.xml
<CustomField>
    <fullName>Years_at_Partner_Property__c</fullName>
    <formula>IF
(
    AND
    (
        NOT(ISBLANK(TEXT(Partner_Property__c))),
        ISBLANK(TEXT(Move_in_Date__c))=False
    ), 

    (TODAY() - Move_in_Date__c)/365, 

    IF
    (
    
        AND
        (
            ISBLANK(TEXT(Partner_Property__c))=False,
            ISBLANK(TEXT(Move_in_Date__c))=True
        ),
         Null, 

        IF
        (
            ISBLANK(TEXT(Partner_Property__c))=True, 0,
            Null
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Years at Partner Property</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>