force-app/main/default/objects/Contact/validationRules/Client_w_Active_RC_Must_Have_Property.validationRule-meta.xml
<ValidationRule>
    <fullName>Client_w_Active_RC_Must_Have_Property</fullName>
    <active>false</active>
    <errorConditionFormula>IF(
  IsAutomationBypassed__c = True,
  False,

  AND( 
    Active_RC_Service_Case__c,
    TEXT(Partner_Property__c) = Null
  )
)</errorConditionFormula>
    <errorDisplayField>Partner_Property__c</errorDisplayField>
    <errorMessage>A client with an Active RC Service Case must have a Partner Property Selected</errorMessage>
</ValidationRule>